# Vocall

./: .env.example  .gitignore  LICENSE  README.md  calls.db  pyproject.toml  requirements-server.txt  requirements.txt
agents/: base.py
api/: main.py
graph/: temporal_graph.py
server/: config.py  main.py
server/agents/: gsa_agent_seed.py
server/api/: agents.py  calls.py
server/core/: agent_engine.py  agent_manager.py  auth.py  call_manager.py  gsa_knowledge_tool.py  salesforce_tool.py
server/discord_bot/: bot.py
server/websocket/: handler.py
tests/: test_health.py  test_temporal_graph.py
voice/: synthesizer.py  transcriber.py
