[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "saga-gnn"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "voice*", "agents*", "graph*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
